build/log/idf_py_stdout_output_14740
[1/9] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D C:\Users\Matteo\Desktop\TANWA\TANWA_FLC\build\bootloader\esp-idf\esptool_py && C:\Users\Matteo\.espressif\python_env\idf5.2_py3.11_env\Scripts\python.exe C:/Users/Matteo/esp/v5.2.1/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 C:/Users/Matteo/Desktop/TANWA/TANWA_FLC/build/bootloader/bootloader.bin"
Bootloader binary size 0x6860 bytes. 0x7a0 bytes (7%) free.
[2/7] Building C object esp-idf/app/CMakeFiles/__idf_app.dir/can_task.c.obj
FAILED: esp-idf/app/CMakeFiles/__idf_app.dir/can_task.c.obj 
ccache C:\Users\Matteo\.espressif\tools\xtensa-esp-elf\esp-13.2.0_20230928\xtensa-esp-elf\bin\xtensa-esp32-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.2.1\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -IC:/Users/Matteo/Desktop/TANWA/TANWA_FLC/build/config -IC:/Users/Matteo/Desktop/TANWA/TANWA_FLC/components/app -IC:/Users/Matteo/esp/v5.2.1/esp-idf/components/newlib/platform_include -IC:/Users/Matteo/esp/v5.2.1/esp-idf/components/freertos/config/include -IC:/Users/Matteo/esp/v5.2.1/esp-idf/components/freertos/config/include/freertos -IC:/Users/Matteo/esp/v5.2.1/esp-idf/components/freertos/config/xtensa/include -IC:/Users/Matteo/esp/v5.2.1/esp-idf/components/freertos/FreeRTOS-Kernel/include -IC:/Users/Matteo/esp/v5.2.1/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/Users/Matteo/esp/v5.2.1/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -IC:/Users/Matteo/esp/v5.2.1/esp-idf/components/freertos/esp_additions/include -IC:/Users/Matteo/esp/v5.2.1/esp-idf/components/esp_hw_support/include -IC:/Users/Matteo/esp/v5.2.1/esp-idf/components/esp_hw_support/include/soc -IC:/Users/Matteo/esp/v5.2.1/esp-idf/components/esp_hw_support/include/soc/esp32 -IC:/Users/Matteo/esp/v5.2.1/esp-idf/components/esp_hw_support/port/esp32/. -IC:/Users/Matteo/esp/v5.2.1/esp-idf/components/heap/include -IC:/Users/Matteo/esp/v5.2.1/esp-idf/components/log/include -IC:/Users/Matteo/esp/v5.2.1/esp-idf/components/soc/include -IC:/Users/Matteo/esp/v5.2.1/esp-idf/components/soc/esp32 -IC:/Users/Matteo/esp/v5.2.1/esp-idf/components/soc/esp32/include -IC:/Users/Matteo/esp/v5.2.1/esp-idf/components/hal/platform_port/include -IC:/Users/Matteo/esp/v5.2.1/esp-idf/components/hal/esp32/include -IC:/Users/Matteo/esp/v5.2.1/esp-idf/components/hal/include -IC:/Users/Matteo/esp/v5.2.1/esp-idf/components/esp_rom/include -IC:/Users/Matteo/esp/v5.2.1/esp-idf/components/esp_rom/include/esp32 -IC:/Users/Matteo/esp/v5.2.1/esp-idf/components/esp_rom/esp32 -IC:/Users/Matteo/esp/v5.2.1/esp-idf/components/esp_common/include -IC:/Users/Matteo/esp/v5.2.1/esp-idf/components/esp_system/include -IC:/Users/Matteo/esp/v5.2.1/esp-idf/components/esp_system/port/soc -IC:/Users/Matteo/esp/v5.2.1/esp-idf/components/esp_system/port/include/private -IC:/Users/Matteo/esp/v5.2.1/esp-idf/components/xtensa/esp32/include -IC:/Users/Matteo/esp/v5.2.1/esp-idf/components/xtensa/include -IC:/Users/Matteo/esp/v5.2.1/esp-idf/components/xtensa/deprecated_include -IC:/Users/Matteo/esp/v5.2.1/esp-idf/components/lwip/include -IC:/Users/Matteo/esp/v5.2.1/esp-idf/components/lwip/include/apps -IC:/Users/Matteo/esp/v5.2.1/esp-idf/components/lwip/include/apps/sntp -IC:/Users/Matteo/esp/v5.2.1/esp-idf/components/lwip/lwip/src/include -IC:/Users/Matteo/esp/v5.2.1/esp-idf/components/lwip/port/include -IC:/Users/Matteo/esp/v5.2.1/esp-idf/components/lwip/port/freertos/include -IC:/Users/Matteo/esp/v5.2.1/esp-idf/components/lwip/port/esp32xx/include -IC:/Users/Matteo/esp/v5.2.1/esp-idf/components/lwip/port/esp32xx/include/arch -IC:/Users/Matteo/esp/v5.2.1/esp-idf/components/lwip/port/esp32xx/include/sys -IC:/Users/Matteo/Desktop/TANWA/TANWA_FLC/components/device_config -IC:/Users/Matteo/Desktop/TANWA/TANWA_FLC/components/hardware -IC:/Users/Matteo/esp/v5.2.1/esp-idf/components/driver/include -IC:/Users/Matteo/esp/v5.2.1/esp-idf/components/driver/deprecated -IC:/Users/Matteo/esp/v5.2.1/esp-idf/components/driver/analog_comparator/include -IC:/Users/Matteo/esp/v5.2.1/esp-idf/components/driver/dac/include -IC:/Users/Matteo/esp/v5.2.1/esp-idf/components/driver/gpio/include -IC:/Users/Matteo/esp/v5.2.1/esp-idf/components/driver/gptimer/include -IC:/Users/Matteo/esp/v5.2.1/esp-idf/components/driver/i2c/include -IC:/Users/Matteo/esp/v5.2.1/esp-idf/components/driver/i2s/include -IC:/Users/Matteo/esp/v5.2.1/esp-idf/components/driver/ledc/include -IC:/Users/Matteo/esp/v5.2.1/esp-idf/components/driver/mcpwm/include -IC:/Users/Matteo/esp/v5.2.1/esp-idf/components/driver/parlio/include -IC:/Users/Matteo/esp/v5.2.1/esp-idf/components/driver/pcnt/include -IC:/Users/Matteo/esp/v5.2.1/esp-idf/components/driver/rmt/include -IC:/Users/Matteo/esp/v5.2.1/esp-idf/components/driver/sdio_slave/include -IC:/Users/Matteo/esp/v5.2.1/esp-idf/components/driver/sdmmc/include -IC:/Users/Matteo/esp/v5.2.1/esp-idf/components/driver/sigma_delta/include -IC:/Users/Matteo/esp/v5.2.1/esp-idf/components/driver/spi/include -IC:/Users/Matteo/esp/v5.2.1/esp-idf/components/driver/temperature_sensor/include -IC:/Users/Matteo/esp/v5.2.1/esp-idf/components/driver/touch_sensor/include -IC:/Users/Matteo/esp/v5.2.1/esp-idf/components/driver/twai/include -IC:/Users/Matteo/esp/v5.2.1/esp-idf/components/driver/uart/include -IC:/Users/Matteo/esp/v5.2.1/esp-idf/components/driver/usb_serial_jtag/include -IC:/Users/Matteo/esp/v5.2.1/esp-idf/components/driver/touch_sensor/esp32/include -IC:/Users/Matteo/esp/v5.2.1/esp-idf/components/esp_pm/include -IC:/Users/Matteo/esp/v5.2.1/esp-idf/components/esp_ringbuf/include -IC:/Users/Matteo/Desktop/TANWA/TANWA_FLC/components/mcu_config -mlongcalls -Wno-frame-address  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=C:/Users/Matteo/Desktop/TANWA/TANWA_FLC=. -fmacro-prefix-map=C:/Users/Matteo/esp/v5.2.1/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -Wno-format -Werror -MD -MT esp-idf/app/CMakeFiles/__idf_app.dir/can_task.c.obj -MF esp-idf\app\CMakeFiles\__idf_app.dir\can_task.c.obj.d -o esp-idf/app/CMakeFiles/__idf_app.dir/can_task.c.obj -c C:/Users/Matteo/Desktop/TANWA/TANWA_FLC/components/app/can_task.c
C:/Users/Matteo/Desktop/TANWA/TANWA_FLC/components/app/can_task.c: In function 'send_data':
C:/Users/Matteo/Desktop/TANWA/TANWA_FLC/components/app/can_task.c:148:13: warning: unused variable 'temp_cj' [-Wunused-variable]
  148 |     int16_t temp_cj[MAX31856_QUANTITY] = {0};
      |             ^~~~~~~
C:/Users/Matteo/Desktop/TANWA/TANWA_FLC/components/app/can_task.c: In function 'send_data_pressure':
C:/Users/Matteo/Desktop/TANWA/TANWA_FLC/components/app/can_task.c:347:1: error: expected declaration or statement at end of input
  347 | }
      | ^
C:/Users/Matteo/Desktop/TANWA/TANWA_FLC/components/app/can_task.c: At top level:
C:/Users/Matteo/Desktop/TANWA/TANWA_FLC/components/app/can_task.c:336:6: warning: 'run_can_task' defined but not used [-Wunused-function]
  336 | void run_can_task(void)
      |      ^~~~~~~~~~~~
ninja: build stopped: subcommand failed.
